devqa/services/emissary-ingress/istio-integration/emissary-admin-port.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: emissary-admin-port
  namespace: emissary
spec:
  portLevelMtls:
    "8877":
      mode: DISABLE
  selector:
    matchLabels:
      app.kubernetes.io/name: emissary-ingress
