devqa/services/emissary-ingress/istio-integration/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: emissary-ingress
  namespace: emissary
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: emissary-ingress
  ingress:
  - port:
      number: 8080
      protocol: HTTP
      name: http
    # defaultEndpoint: 127.0.0.1:8080
  - port:
      number: 8443
      protocol: HTTPS
      name: https
    # defaultEndpoint: 127.0.0.1:8443
  egress:
  - hosts:
    - "*/*"
