devqa/services/emissary-ingress/istio-integration/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: emissary-ingress
  namespace: emissary
spec:
  hosts:
  - "emissary-ingress.internal.magiccityit.com"
  gateways:
  # - emissary/emissary-gateway
  - mesh
  http:
  # - match:
  #   - gateways:
  #     - emissary/emissary-gateway
  #     port: 80
  #   route:
  #   - destination:
  #       host: emissary-ingress.emissary
  #       port:
  #         number: 80
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: localhost.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: emissary-ingress-tls
  namespace: emissary
spec:
  hosts:
  - "emissary-ingress.internal.magiccityit.com"
  gateways:
  # - emissary/emissary-gateway
  - mesh
  tls:
  # - match:
  #   - gateways:
  #     - emissary/emissary-gateway
  #     port: 443
  #     sniHosts:
  #     - emissary-ingress.internal.magiccityit.com
  #   route:
  #   - destination:
  #       host: emissary-ingress.internal.magiccityit.com
  #       port:
  #         number: 443
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - emissary-ingress.internal.magiccityit.com
    route:
    - destination:
        host: localhost.local
        port:
          number: 8443
  # http:
  # - route:
  #   - destination:
  #       host: emissary-ingress
  #       port:
  #         number: 443
